[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "klaaro"
version = "0.1.1"
description = "Official Python SDK for the Klaaro API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.urls]
Homepage = "https://klaaro.ai"
Repository = "https://github.com/klaaro-ai/klaaro-py"
Issues = "https://github.com/klaaro-ai/klaaro-py/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/klaaro"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
